--- a/views/content/film/film_details.ejs
+++ b/views/content/film/film_details.ejs
@@ -42,7 +42,7 @@
             </div>
             <div class="col-xl-7 col-lg-7 col-md-7 col-sm-7 col-7" style="text-align: left; font-size: 17px;">
                 <!-- /* <div class="col-xl-5 col-lg-5 col-md-5 col-sm-5 col-5" style="text-align: left;"> */ -->
-                <h2 class="title-movie" style="font-weight: bold">
+                <h2 style="font-weight: bold; text-transform: uppercase; margin-bottom: 20px;">
                     <%= currentFilm.film_Name %>
                 </h2>
                 <% for(var i=1; i<=10;i++){ %>
