--- a/views/partials/header/menu.ejs
+++ b/views/partials/header/menu.ejs
@@ -6,7 +6,7 @@
         </div>
         <div class="navbar-header">
             <ul class="nav navbar-nav">
-                <li><a href="/gioi-thieu">Giới thiệu</a></li>
+                <li class="active"><a href="/gioi-thieu">Giới thiệu</a></li>
                 <li><a href="/phim">Phim</a></li>
                 <li><a href="/he-thong-rap">Hệ thống rạp</a></li>
                 <li><a href="/khuyen-mai">Khuyến mãi</a></li>
@@ -15,8 +15,7 @@
 
             <form class="navbar-form navbar-left" role="search" method="GET" action="/filmSearch">
                 <div class="form-group">
-                    <input type="text" name="txtSearch" id="txtSearch" class="form-control radius"
-                        placeholder="Nhập tên phim cần tìm">
+                    <input type="text" name="txtSearch" id="txtSearch" class="form-control radius" placeholder="Nhập tên phim cần tìm">
                 </div>
                 <button type="submit" class="btn btn-primary radiusSearch">Search</button>
             </form>
