--- a/views/admin/showtime.ejs
+++ b/views/admin/showtime.ejs
@@ -16,7 +16,7 @@
                             <th>Rạp - Cụm rạp</th>
                             <th>Phim</th>
                             <th>Ngày chiếu </th>
-                            <th>Thời gian bắt đầu - kết thúc </th>
+                            <th>Thời gian</th>
                             <th>Giá vé</th>
                             <th>Thao tác</th>
                         </tr>
