--- a/views/content/cineplex.ejs
+++ b/views/content/cineplex.ejs
@@ -38,6 +38,10 @@
         margin-bottom: 20px;
         cursor: pointer;
     }
+
+    /* .cineplex-system-showtime {
+        text-align: left;
+    } */
 </style>
 <!-- <h1 class="title-section">Hệ thống rạp tại Một Chút Phim Cinema</h1> -->
 
@@ -60,7 +64,6 @@
 
     <!-- SUẤT CHIẾU -->
     <div class="cineplex-system-showtime">
-        <h3>SUẤT CHIẾU HIỆN TẠI</h3>
         <!-- LOAD BẰNG AJAX -->
         <div id="show_showtimes">
             <% if(defaultShowtimes !=null){ %>
